# taxembed

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_NOTES.md  JOURNEY.md  Makefile  POINCARE_EMBEDDINGS_EXPLAINED.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  README.org  RELEASE_SUMMARY.md  REPOSITORY_STATUS.md  RESTRUCTURING_SUMMARY.md  SCRIPTS_GUIDE.md  TRAIN_FULL_GUIDE.md  TRAIN_SMALL_GUIDE.md  analyze_hierarchy.py  analyze_hierarchy_hyperbolic.py  assess_training.py  benchmark_mps.py  build_transitive_closure.py  check_dataset_composition.py  cleanup_for_release.sh  cleanup_old_checkpoints.py  cleanup_repo.sh  evaluate_and_visualize.py  evaluate_full.py  final_sanity_check.py  git_push_commands.sh  monitor_training.py  nn_demo.py  prepare_taxonomy_data.py  pyproject.toml  remap_edges.py  requirements.txt  resume_training.py  ruff.toml  run_hierarchical_training.sh  (+11 more)
_vendor/: README.md  embed.py
_vendor/hype/: adjacency_matrix_dataset.pyx
docs/: CLI_COMMANDS.md  CONTRIBUTING.md  JOURNEY.md  QUICKSTART.md  TRAIN_FULL_GUIDE.md  TRAIN_SMALL_GUIDE.md  theory.md  user-guide.md
docs/archive/: BALL_CONSTRAINT_ENFORCEMENT.md  BUGS_FOUND_AND_FIXED.md  CHECKPOINT_MANAGEMENT.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  DATA_FIXES_SUMMARY.md  DATA_HANDLING_REVIEW.md  FINAL_ASSESSMENT.md  FINAL_STATUS.md  GETTING_STARTED.md  NEXT_STEPS.md  PERMANENT_FIX_PLAN.md  PERMANENT_FIX_SUMMARY.md  PRE_PUSH_CHECKLIST.md  README.md  RESTRUCTURING_COMPLETE.md  REVERT_HYPERPARAMS.md  SAFETY_CHECK_BALL_CONSTRAINTS.md  SESSION_SUMMARY_NOV8.md  STRUCTURE.md  TRAINING_EXPLAINED_SIMPLE.md  TRAINING_FIXES_APPLIED.md  TRAINING_ISSUES_FIXED.md  TRAINING_OPTIMIZATIONS.md  TRAINING_RESULTS.md  TRAINING_SUMMARY.md
docs/archive/debug_scripts/: analyze_embeddings.py  analyze_messiness.py  compare_old_new.py  compare_old_vs_current.py  diagnose_issues.py  find_what_broke.py  inspect_checkpoint.py  test_depth_coverage.py  verify_ball_safety.py  verify_fixes.py  visualize_trained_only.py
docs/archive/legacy_facebook/: README.md
docs/archive/legacy_facebook/hype/: adjacency_matrix_dataset.cpp  graph.py  graph_dataset.cpp  graph_dataset.pyx  train.py
docs/archive/legacy_scripts/: README.md  check_model.py  cleanup_repo.sh  prepare_data.py  regenerate_data.sh  visualize.py  visualize_embeddings.py
examples/: README.md  basic_training.py  custom_dataset.py  nn_demo.py  visualize_groups.py
hype/manifolds/: manifold.py
scripts/: analyze_hierarchy_hyperbolic.py  audit_taxonomy_noise.py  build_clade_dataset.py  build_clean_dataset.py  compare_clean_vs_dirty.py  evaluate.py  monitor.py  remap_data.py  train.py  train_lrz.sh  validate_data.py  visualize_embeddings.py
src/taxembed/: __init__.py
src/taxembed/analysis/: __init__.py  dimension.py  hierarchy.py
src/taxembed/builders/: __init__.py  taxopy_clade.py
src/taxembed/cli/: __init__.py  analyze.py  check.py  download.py  main.py  prepare.py  train.py  visualize.py
src/taxembed/data/: __init__.py  download.py  transitive.py
src/taxembed/manifolds/: __init__.py
src/taxembed/models/: __init__.py  metrics.py  poincare.py
src/taxembed/optim/: __init__.py  riemannian.py
src/taxembed/training/: __init__.py  data_loader.py  loss.py  trainer.py
src/taxembed/utils/: data_validation.py
src/taxembed/validation/: __init__.py  checks.py
src/taxembed/visualization/: __init__.py  umap_viz.py
tests/: __init__.py  conftest.py  test_data.py  test_example.py  test_models.py  test_training.py  test_training_pairs.py  test_validation.py
