[build-system]
requires = ["setuptools>=68.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxembed"
version = "0.1.0"
description = "Learning hierarchical embeddings of organisms using Poincaré geometry"
readme = "README.md"
license = { text = "CC-BY-NC 4.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "iopath>=0.1.10",
    "nltk>=3.8",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "cython>=3.0",
    "tqdm>=4.60.0",
    "numpy>=1.21.0,<2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "umap-learn>=0.5.0",
]

[project.urls]
Repository = "https://github.com/jcoludar/taxembed"
Documentation = "https://github.com/jcoludar/taxembed"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W503",   # line break before binary operator
]

[tool.ruff.lint.isort]
known-first-party = ["taxembed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/taxembed --cov-report=term-missing"

[tool.setuptools]
packages = ["taxembed"]

[tool.setuptools.package-data]
taxembed = ["py.typed"]
